--- a/mobile_app_dev/pubspec.yaml
+++ b/mobile_app_dev/pubspec.yaml
@@ -30,6 +30,16 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # Adobe XD
+  adobe_xd: ^2.0.0+1
+
+  # Splash Screen
+  # https://www.freecodecamp.org/news/how-to-add-a-splash-screen-in-flutter-app/
+  splashscreen: ^1.3.5
+
+  # Flutter Platform Widgets
+  # https://pub.dev/packages/flutter_platform_widgets
+  flutter_platform_widgets: ^1.9.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
