--- a/mobile_app_dev/pubspec.yaml
+++ b/mobile_app_dev/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   # https://pub.dev/packages/google_nav_bar
   google_nav_bar: ^5.0.5
 
+  # Card Swiper
+  card_swiper: ^1.0.4
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
