--- a/mobile_app_dev/android/app/build.gradle
+++ b/mobile_app_dev/android/app/build.gradle
@@ -43,7 +43,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.mobile_app_dev"
+        applicationId "com.aav.mobile_app_dev"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
