--- a/mobile_app_dev/pubspec.yaml
+++ b/mobile_app_dev/pubspec.yaml
@@ -79,6 +79,9 @@ dependencies:
   firebase_auth: ^3.3.4
   cloud_firestore: ^3.1.5
 
+  # Provider
+  provider: ^6.0.1
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
